--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "nodemon src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -e js ./src/server.js"
+    "dev": "nodemon -e js -r dotenv/config ./src/server.js"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "dotenv": "^10.0.0",
+    "nodemon": "^2.0.12"
   }
 }
